2007-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/verilog-mode.el (verilog-mode-map): Fix typo.
	
	* files.el (auto-mode-alist): Recognize verilog files.

	* progmodes/verilog-mode.el (verilog-string-replace-matches)
	(verilog-string-remove-spaces, verilog-re-search-forward)
	(verilog-re-search-backward, verilog-re-search-forward-quick)
	(verilog-re-search-backward-quick, verilog-get-beg-of-line)
	(verilog-get-end-of-line, verilog-within-string): Move definitions
	before first use. No code changes.

2007-12-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/verilog-mode.el (verilog-mode-version)
	(verilog-mode-release-date): Don't use expanding keywords.
	(provide): Move to the end of file.
	(fboundp): Don't check if eval-when-compile is bound, it is used
	later in the file without checking.
	(when, unless): Copy definitions from subr.el.
	(char-before, defcustom, defface, customize-group)
	(verilog-batch-error-wrapper): Don't use old style backquotes.
	(verilog-regexp-opt): Avoid using the cl function case.
	(verilog-regexp-words): Remove duplicated definition.
	(verilog-mode-abbrev-table): Remove, duplicate.
	(verilog-mode-map, verilog-template-map, verilog-mode-mouse-map):
	Declare and initialize in one step.
	(verilog-declaration-prefix-re, verilog-declaration-re)
	(verilog-end-of-statement, verilog-indent-declaration)
	(verilog-get-lineup-indent): Remove trailing whitespace.
	(verilog-mode): Fix autoload cookie. Set
	beginning-of-defun-function and end-of-defun-function. Use when
	instead of if.
	(verilog-emacs-features, verilog-auto-ascii-enum)
	(verilog-insert-indices): Escape braces in doc strings.

2007-12-08  Michael McNamara <mac@verilog.com>
	    Wilson Snyder <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el: New file.

2007-12-08  Eli Zaretskii  <eliz@fencepost.gnu.org>

	* international/latexenc.el (latexenc-find-file-coding-system): If
	both coding-system-for-write and buffer-file-coding-system of