@@ -1,7 +1,11 @@
 2007-12-08  Dan Nicolaescu  <dann@ics.uci.edu>
 
-	* progmodes/verilog-mode.el (verilog-mode-map): Fix typo.
-	
+	* progmodes/verilog-mode.el (verilog-mode-map)
+	(verilog-template-map, verilog-mode-mouse-map): Fix typos.
+	(verilog-colorize-include-files): Use only overlay functions so
+	that it can work on both emacs and XEmacs.
+	(set-extent-keymap): Remove unused defun.
+
 	* files.el (auto-mode-alist): Recognize verilog files.
 
 	* progmodes/verilog-mode.el (verilog-string-replace-matches)
